--- a/src/components/common/radio/Radio.scss
+++ b/src/components/common/radio/Radio.scss
@@ -4,7 +4,7 @@
   background-color: $gray-bg-1;
   border-width: 1px;
   border-style: solid;
-  border-color: $border-color;
+  border-color: var(--gray-border-2);
   border-radius: 0.5rem;
   padding: 1.5rem;
   width: 100%;
